lbp filter delegation
Signed-off-by: Sandesh Kumar <sandeshkr419@gmail.com>